--- a/kmtmg/en.lproj/MyDocument.xib
+++ b/kmtmg/en.lproj/MyDocument.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1070</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
+		<string key="IBDocument.SystemVersion">11C62</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1934</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<string key="IBDocument.AppKitVersion">1138.23</string>
+		<string key="IBDocument.HIToolboxVersion">567.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			<string key="NS.object.0">1934</string>
@@ -49,8 +49,9 @@
 				<string key="NSWindowTitle">Rubber</string>
 				<string key="NSWindowClass">MyLayerWindow</string>
 				<nil key="NSViewClass"/>
+				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="953402551">
-					<nil key="NSNextResponder"/>
+					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSCustomView" id="668234819">
@@ -58,14 +59,19 @@
 							<int key="NSvFlags">274</int>
 							<string key="NSFrameSize">{169, 125}</string>
 							<reference key="NSSuperview" ref="953402551"/>
+							<reference key="NSWindow"/>
 							<string key="NSClassName">MyRubberView</string>
 						</object>
 					</array>
 					<string key="NSFrameSize">{169, 125}</string>
+					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="668234819"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
-				<string key="NSMaxSize">{1e+13, 1e+13}</string>
+				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
+				<int key="NSWindowCollectionBehavior">128</int>
+				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
 			<object class="NSWindowTemplate" id="464546253">
 				<int key="NSWindowBacking">1</int>
@@ -74,8 +80,9 @@
 				<string key="NSWindowTitle">Cursor</string>
 				<string key="NSWindowClass">MyLayerWindow</string>
 				<nil key="NSViewClass"/>
+				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="397099299">
-					<nil key="NSNextResponder"/>
+					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSCustomView" id="186698734">
@@ -83,14 +90,19 @@
 							<int key="NSvFlags">274</int>
 							<string key="NSFrameSize">{202, 136}</string>
 							<reference key="NSSuperview" ref="397099299"/>
+							<reference key="NSWindow"/>
 							<string key="NSClassName">MyCursorView</string>
 						</object>
 					</array>
 					<string key="NSFrameSize">{202, 136}</string>
+					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="186698734"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
-				<string key="NSMaxSize">{1e+13, 1e+13}</string>
+				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
+				<int key="NSWindowCollectionBehavior">128</int>
+				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
 			<object class="NSWindowTemplate" id="275939982">
 				<int key="NSWindowStyleMask">15</int>
@@ -100,6 +112,7 @@
 				<string key="NSWindowTitle">Window</string>
 				<string key="NSWindowClass">MyWindow</string>
 				<string key="NSViewClass">View</string>
+				<nil key="NSUserInterfaceItemIdentifier"/>
 				<string key="NSWindowContentMinSize">{320, 240}</string>
 				<object class="NSView" key="NSWindowView" id="568628114">
 					<reference key="NSNextResponder"/>
@@ -126,7 +139,6 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{0, 418}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="124652779"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="374602727">
@@ -152,7 +164,6 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{0, 450}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="438582917"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="550676989">
@@ -174,7 +185,6 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{32, 418}, {32, 34}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="271182511"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="88099234">
@@ -196,7 +206,6 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{32, 466}, {32, 17}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="439273918"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="483550541">
@@ -222,7 +231,6 @@
 															<int key="NSvFlags">268</int>
 															<string key="NSFrame">{{32, 450}, {32, 17}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="221403021"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="475798557">
@@ -244,7 +252,6 @@
 															<int key="NSvFlags">266</int>
 															<string key="NSFrame">{{64, 419}, {426, 64}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="335001281"/>
 															<bool key="NSViewCanDrawConcurrently">YES</bool>
 															<string key="NSClassName">MyHScrollView</string>
@@ -254,7 +261,6 @@
 															<int key="NSvFlags">276</int>
 															<string key="NSFrameSize">{64, 419}</string>
 															<reference key="NSSuperview" ref="771364648"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="245208161"/>
 															<bool key="NSViewCanDrawConcurrently">YES</bool>
 															<string key="NSClassName">MyVScrollView</string>
@@ -274,23 +280,20 @@
 																				<object class="NSCustomView" id="465732959">
 																					<reference key="NSNextResponder" ref="615534696"/>
 																					<int key="NSvFlags">274</int>
-																					<string key="NSFrameSize">{415, 408}</string>
+																					<string key="NSFrameSize">{426, 419}</string>
 																					<reference key="NSSuperview" ref="615534696"/>
-																					<reference key="NSWindow"/>
 																					<reference key="NSNextKeyView" ref="1031482229"/>
 																					<bool key="NSViewCanDrawConcurrently">YES</bool>
 																					<string key="NSClassName">MyView</string>
 																				</object>
 																			</array>
-																			<string key="NSFrameSize">{415, 408}</string>
+																			<string key="NSFrameSize">{426, 419}</string>
 																			<reference key="NSSuperview" ref="115432387"/>
-																			<reference key="NSWindow"/>
 																			<reference key="NSNextKeyView" ref="465732959"/>
 																		</object>
 																	</array>
-																	<string key="NSFrameSize">{415, 408}</string>
+																	<string key="NSFrameSize">{426, 419}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
-																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="615534696"/>
 																	<reference key="NSDocView" ref="615534696"/>
 																	<object class="NSColor" key="NSBGColor" id="407048720">
@@ -307,9 +310,8 @@
 																<object class="NSScroller" id="303982887">
 																	<reference key="NSNextResponder" ref="245208161"/>
 																	<int key="NSvFlags">256</int>
-																	<string key="NSFrame">{{415, 0}, {11, 408}}</string>
+																	<string key="NSFrame">{{415, 0}, {11, 413}}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
-																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="276230304"/>
 																	<int key="NSsFlags">256</int>
 																	<reference key="NSTarget" ref="245208161"/>
@@ -320,9 +322,8 @@
 																<object class="NSScroller" id="1031482229">
 																	<reference key="NSNextResponder" ref="245208161"/>
 																	<int key="NSvFlags">256</int>
-																	<string key="NSFrame">{{0, 408}, {415, 11}}</string>
+																	<string key="NSFrame">{{0, 408}, {420, 11}}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
-																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="303982887"/>
 																	<int key="NSsFlags">257</int>
 																	<reference key="NSTarget" ref="245208161"/>
@@ -332,9 +333,8 @@
 															</array>
 															<string key="NSFrame">{{64, 0}, {426, 419}}</string>
 															<reference key="NSSuperview" ref="771364648"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="115432387"/>
-															<int key="NSsFlags">48</int>
+															<int key="NSsFlags">133168</int>
 															<reference key="NSVScroller" ref="303982887"/>
 															<reference key="NSHScroller" ref="1031482229"/>
 															<reference key="NSContentView" ref="115432387"/>
@@ -342,7 +342,6 @@
 													</array>
 													<string key="NSFrameSize">{490, 483}</string>
 													<reference key="NSSuperview" ref="969414390"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="858913219"/>
 													<string key="NSClassName">NSView</string>
 												</object>
@@ -355,7 +354,6 @@
 															<int key="NSvFlags">260</int>
 															<string key="NSFrame">{{32, 128}, {32, 32}}</string>
 															<reference key="NSSuperview" ref="276230304"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="689508025"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="569953613">
@@ -377,7 +375,6 @@
 															<int key="NSvFlags">260</int>
 															<string key="NSFrame">{{0, 128}, {32, 32}}</string>
 															<reference key="NSSuperview" ref="276230304"/>
-															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="717106582"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="455745425">
@@ -407,8 +404,7 @@
 																			<int key="NSvFlags">274</int>
 																			<string key="NSFrameSize">{488, 126}</string>
 																			<reference key="NSSuperview" ref="463231561"/>
-																			<reference key="NSWindow"/>
-																			<reference key="NSNextKeyView" ref="452081562"/>
+																			<reference key="NSNextKeyView" ref="12926121"/>
 																			<string key="NSMinGridSize">{0, 0}</string>
 																			<string key="NSMaxGridSize">{0, 0}</string>
 																			<int key="NSMaxNumberOfGridRows">0</int>
@@ -427,7 +423,6 @@
 																	</array>
 																	<string key="NSFrame">{{1, 1}, {488, 126}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
-																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="906795404"/>
 																	<reference key="NSDocView" ref="906795404"/>
 																	<reference key="NSBGColor" ref="407048720"/>
@@ -438,7 +433,6 @@
 																	<int key="NSvFlags">-2147483392</int>
 																	<string key="NSFrame">{{-100, -100}, {15, 143}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
-																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="167522541"/>
 																	<reference key="NSTarget" ref="689508025"/>
 																	<string key="NSAction">_doScroller:</string>
@@ -450,7 +444,6 @@
 																	<int key="NSvFlags">-2147483392</int>
 																	<string key="NSFrame">{{-100, -100}, {233, 15}}</string>
 																	<reference key="NSSuperview" ref="689508025"/>
-																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="463231561"/>
 																	<int key="NSsFlags">1</int>
 																	<reference key="NSTarget" ref="689508025"/>
@@ -460,9 +453,8 @@
 															</array>
 															<string key="NSFrameSize">{490, 128}</string>
 															<reference key="NSSuperview" ref="276230304"/>
-															<reference key="NSWindow"/>
-															<reference key="NSNextKeyView" ref="12926121"/>
-															<int key="NSsFlags">546</int>
+															<reference key="NSNextKeyView" ref="463231561"/>
+															<int key="NSsFlags">133666</int>
 															<reference key="NSVScroller" ref="12926121"/>
 															<reference key="NSHScroller" ref="167522541"/>
 															<reference key="NSContentView" ref="463231561"/>
@@ -470,21 +462,18 @@
 													</array>
 													<string key="NSFrame">{{0, 493}, {490, 0}}</string>
 													<reference key="NSSuperview" ref="969414390"/>
-													<reference key="NSWindow"/>
 													<reference key="NSNextKeyView" ref="731023500"/>
 													<string key="NSClassName">NSView</string>
 												</object>
 											</array>
 											<string key="NSFrameSize">{490, 493}</string>
 											<reference key="NSSuperview" ref="1020549599"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="771364648"/>
 											<int key="NSDividerStyle">3</int>
 										</object>
 									</array>
 									<string key="NSFrameSize">{490, 493}</string>
 									<reference key="NSSuperview" ref="532050384"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="969414390"/>
 									<string key="NSClassName">NSView</string>
 								</object>
@@ -497,21 +486,17 @@
 											<int key="NSvFlags">274</int>
 											<string key="NSFrameSize">{0, 493}</string>
 											<reference key="NSSuperview" ref="452081562"/>
-											<reference key="NSWindow"/>
-											<reference key="NSNextKeyView"/>
 											<string key="NSClassName">NSView</string>
 										</object>
 									</array>
 									<string key="NSFrame">{{500, 0}, {0, 493}}</string>
 									<reference key="NSSuperview" ref="532050384"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="510901244"/>
 									<string key="NSClassName">NSView</string>
 								</object>
 							</array>
 							<string key="NSFrameSize">{500, 493}</string>
 							<reference key="NSSuperview" ref="568628114"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="1020549599"/>
 							<bool key="NSIsVertical">YES</bool>
 							<int key="NSDividerStyle">3</int>
@@ -519,12 +504,13 @@
 					</array>
 					<string key="NSFrameSize">{500, 493}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="532050384"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
 				<string key="NSMinSize">{320, 262}</string>
-				<string key="NSMaxSize">{1e+13, 1e+13}</string>
+				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
+				<int key="NSWindowCollectionBehavior">128</int>
+				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
 			<object class="NSCustomObject" id="796877042">
 				<string key="NSClassName">NSApplication</string>
